@@ -1,3 +1,12 @@
+2003-06-08  John Levon  <levon@movementarian.org>
+
+	* libutil++/Makefile.am:
+	* libutil++/unique_storage.h: add new template for
+	unique storage of values
+
+	* libpp/name_storage.h:
+	* libpp/name_storage.cpp: use it
+
 2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/profile_container.cpp: fix order of file output with opannoate
